feat: update keycloak version
